"$Id$"
Top of SVN tree:
------------------------------------------------------------------------------

gtk-v2/src/about.c
gtk-v2/src/image.h
gtk-v2/src/sound.c
gtk-v2/src/main.h
  - Doxygenification of comments and files.
Kevin Bulgrien 2007-09-02

gtk-v2/glade/AUTHORS
  - Adjust some glade file descriptions.
gtk-v2/glade/oroboros.glade
  - Reorder character data tabs.
Kevin Bulgrien 2007-09-02

gtk-v2/glade/AUTHORS
  - Add oroboros.glade and add short paragraph descriptions of each of the new
    layout files.
gtk-v2/glade/Makefile.am
gtk-v2/glade/Makefile.in
gtk-v2/glade/oroboros.glade
gtk-v2/glade/oroboros.gladep
  - A layout designed expressly for clients running with 1024x768 resolution.
Doxyfile
  - Copied from server; modified and added for client.
prop svn:ignore
  - Add autom4te
gtk-v2/src/main.c
  - Tabs --> spaces, commenting, and doxygenation. No functional code changes.
Kevin Bulgrien 2007-09-03

configure
configure.in
  - Tabs --> spaces, indenting uniformity, and typo corrections only.
Kevin Bulgrien 2007-09-02

aclocal.m4
configure
Makefile.in
common/Makefile.in
gtk/Makefile.in
gtk-v2/Makefile.in
gtk-v2/themes/Makefile.in
gtk-v2/src/Makefile.in
gtk-v2/glade/Makefile.in
help/Makefile.in
pixmaps/Makefile.in
sound-src/Makefile.in
utils/Makefile.in
x11/Makefile.in
  - Result of new and fixed m4 files.
autogen.sh
  - Point aclocal at macros so that undefined macros do not crash ./configure
macros/gtk.m4
macros/sdl.m4
  - ./configure should never crash, so add to remove errors as follows:
    aclocal:configure.in:?: warning: macro `AM_PATH_GTK' not found in library
    ./configure: line ?: syntax error near unexpected token `1.0.0'
    ./configure: line ?: `             AM_PATH_GTK(1.0.0)'
    aclocal:configure.in:?: warning: macro `AM_PATH_SDL' not found in library
    ./configure: line ?: syntax error near unexpected token `1.1.3'
    ./configure: line ?: `  AM_PATH_SDL(1.1.3)'
macros/curses.m4
macros/gnome-print-check.m4
macros/gnome-gettext.m4